--- a/android/app/src/main/res/values/styles.xml
+++ b/android/app/src/main/res/values/styles.xml
@@ -4,22 +4,23 @@
   standalone="yes"
 ?>
 <resources xmlns:tools="http://schemas.android.com/tools">
-  <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
+  <style name="AppTheme" parent="Theme.EdgeToEdge.Light">
     <!-- Customize your theme here. -->
     <item name="android:editTextBackground">@drawable/rn_edit_text_material</item>
     <item name="colorPrimary">@color/colorPrimary</item>
     <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-    <item name="android:navigationBarColor">@color/colorPrimaryDark</item>
-    <item name="android:statusBarColor">@color/colorPrimaryDark</item>
-    <item name="colorControlActivated">#2596be</item> 
+    <item name="android:navigationBarColor">@android:color/transparent</item>
+    <item name="android:statusBarColor">@android:color/transparent</item>
+    <item name="colorControlActivated">#2596be</item>
+    <item name="enforceNavigationBarContrast">false</item>
   </style>
 
   <style name="SplashScreenTheme" parent="SplashScreen_SplashTheme">
-    <item name="android:statusBarColor">@color/colorPrimaryDark</item>
+    <item name="android:statusBarColor">@android:color/transparent</item>
     <item name="android:windowActionBar">false</item>
     <item name="android:windowNoTitle">true</item>
     <item name="android:windowFullscreen">true</item>
-    <item name="android:navigationBarColor">@color/colorPrimaryDark</item>
+    <item name="android:navigationBarColor">@android:color/transparent</item>
 </style>
   <style name="Theme.App.SplashScreen" parent="AppTheme">
     <!-- Below line is handled by '@expo/configure-splash-screen' command and it's discouraged to modify it manually -->
